.gitlab-ci.yml: Use apk package manager (not apt)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,7 +130,7 @@ build-docker-builder:
     - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "NONE")"
     - LATEST="$(docker version -f '{{ .Client.Version }}')"
     - echo "${CI_REGISTRY_IMAGE}"
-    - apt-get install -y curl
+    - apk update && apk add curl
     - 'curl --header "PRIVATE-TOKEN: ${CI_JOB_TOKEN}" "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/registry/repositories"'
     - 'curl --header "PRIVATE-TOKEN: ${CI_JOB_TOKEN}" "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/registry/repositories/${CI_REGISTRY_IMAGE}/tags"'
     - |
