--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ stages:
     - '[[ "${ARCHITECTURE?}" == "arm64"   ]] && { ARCH=arm64v8; ARCH_QEMU=aarch64; NCP_TAG=arm64; }'
     - docker pull ${CI_REGISTRY_IMAGE}/nextcloudpi-${NCP_TAG?}:latest || true
     - |
-      for TARGET in debian-ncp lamp nextcloud nextcloudpi
+      for TARGET in nextcloudpi debian-ncp lamp nextcloud
       do
         DOCKER_BUILDKIT=1 docker build --progress=plain . -f docker/multistage/Dockerfile --pull --target "${TARGET}" \
           --build-arg release=${RELEASE?} --build-arg arch=${ARCH?} --build-arg arch_qemu=${ARCH_QEMU?} --build-arg "ncp_ver=${VERSION}" \
@@ -59,21 +59,24 @@ stages:
   script:
     - ./tests/sysyem_tests.py
 
-.build-test-image-tmpl: &build-test-image-tmpl
-  <<: *docker-login-before-script
-  stage: pre-test
-  image: $DOCKER_BUILDER_IMAGE
+.docker-deploy-tmpl: &docker-deploy-tmpl
+  << : *docker-login-before-script
+  stage: deploy
+  image: docker:latest
   services:
     - docker:dind
   script:
-    - '[[ "${ARCHITECTURE?}" == "armhf" ]] && QEMU_ARCH="arm"     || true'
-    - '[[ "${ARCHITECTURE?}" == "arm64" ]] && QEMU_ARCH="aarch64" || true'
-    - |
-      docker build --progress=plain . -f - -t "${CI_REGISTRY_IMAGE}/ncp-testing-${ARCHITECTURE?}:${CI_PIPELINE_IID}" <<-EOF
-        FROM "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE?}:${CI_PIPELINE_IID}"
-        COPY qemu-${QEMU_ARCH?}-static /usr/bin
-      EOF
-    - docker push "${CI_REGISTRY_IMAGE}/ncp-testing-${ARCHITECTURE?}"
+    - docker pull "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}"
+    - docker login -u "${DOCKERHUB_USER?}" -p "${DOCKERHUB_PASSWORD?}"
+    - >
+      docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}" 
+      "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${ARCHITECTURE}:latest"
+    - >
+      docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}" 
+      "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${ARCHITECTURE}:${CI_COMMIT_REF_NAME}"
+  rules:
+    - if: '$CI_COMMIT_REF_NAME' =~ ^v[0-9]+\.[0-9]+\.[0-9]+$
+      when: manual
 
 test-docker-x86:
   << : *integration-tests-docker-tmpl
