--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - build
   - pre-test
   - test
+  - deploy
 
 .docker-login-before-script: &docker-login-before-script
   before_script:
@@ -75,7 +76,9 @@ stages:
       docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}" 
       "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${ARCHITECTURE}:${CI_COMMIT_REF_NAME}"
   rules:
-    - if: '$CI_COMMIT_REF_NAME' =~ ^v[0-9]+\.[0-9]+\.[0-9]+$
+    - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/'
+      when: manual
+    - if: '$DEPLOYMENT_TESTING == "true"'
       when: manual
 
 test-docker-x86:
@@ -101,11 +104,6 @@ test-docker-arm64:
     NAME: nextcloudpi
   needs:
     - docker-build-arm64
-
-#system-tests-docker-amd64:
-#  << : *system-test-docker-tmpl
-#  variables:
-#    ARCHITECTURE: "x86"
 
 docker-build-x86:
   << : *docker-build-tmpl
@@ -142,22 +140,8 @@ build-docker-builder:
         echo "Image already exists for latests docker version ($LATEST). Not rebuilding."
       fi
 
-# build-arm64-test-image:
-#   << : *build-test-image-tmpl
-#   variables:
-#     ARCHITECTURE: arm64
-
-# build-armhf-test-image:
-#   << : *build-test-image-tmpl
-#   variables:
-#     ARCHITECTURE: armhf
-
-# tag-amd64-test-image:
-#   << : *docker-login-before-script
-#   stage: pre-test
-#   image: $DOCKER_BUILDER_IMAGE
-#   services:
-#     - docker:dind
-#   script:
-#     - docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-x86:${CI_PIPELINE_IID}" "${CI_REGISTRY_IMAGE}/ncp-testing-x86:${CI_PIPELINE_IID}"
-#     - docker push "${CI_REGISTRY_IMAGE}/ncp-testing-x86";
+docker-deploy-x86:
+  <<: *docker-deploy-tmpl
+  variables:
+    ARCHITECTURE: amd64
+    DEPLOYMENT_TESTING: "true"
