--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ variables:
 
 stages:
   - pre-build
-  - build-test-deploy
   - build
   - pre-test
   - test
@@ -17,7 +16,7 @@ stages:
 
 .docker-build-tmpl: &docker-build-tmpl
   << : *docker-login-before-script
-  stage: build-test-deploy
+  stage: build
   image: $DOCKER_BUILDER_IMAGE
   services:
     - docker:dind
@@ -42,7 +41,7 @@ stages:
       done
 
 .integration-tests-docker-tmpl: &integration-tests-docker-tmpl
-  stage: build-test-deploy
+  stage: test
   services:
     - name: selenium/standalone-firefox
       alias: selenium
@@ -63,7 +62,7 @@ stages:
 
 .docker-deploy-tmpl: &docker-deploy-tmpl
   << : *docker-login-before-script
-  stage: build-test-deploy
+  stage: deploy
   image: docker:latest
   services:
     - docker:dind
@@ -81,41 +80,6 @@ stages:
       when: manual
     - if: '$DEPLOYMENT_TESTING == "true"'
       when: manual
-
-build-docker-builder:
-  << : *docker-login-before-script
-  stage: pre-build
-  image: docker:latest
-  services:
-    - docker:dind
-  script:
-    - docker pull ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "docker-builder:latest not found in \"${CI_REGISTRY_IMAGE}\"!"
-    - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "NONE")"
-    - LATEST="$(docker version -f '{{ .Client.Version }}')"
-    - |
-      if [[ "$CURRENT" != "$LATEST" ]]
-      then
-        docker build --progress=plain . -f ci/docker/docker-builder/Dockerfile \
-          -t "${CI_REGISTRY_IMAGE}/docker-builder:latest" -t "${CI_REGISTRY_IMAGE}/docker-builder:${LATEST}"
-        docker push "${CI_REGISTRY_IMAGE}/docker-builder:latest"
-      else
-        echo "Image already exists for latests docker version ($LATEST). Not rebuilding."
-      fi
-
-docker-build-x86:
-  << : *docker-build-tmpl
-  variables:
-    ARCHITECTURE: "x86"
-
-docker-build-armhf:
-  <<: *docker-build-tmpl
-  variables:
-    ARCHITECTURE: "armhf"
-
-docker-build-arm64:
-  <<: *docker-build-tmpl
-  variables:
-    ARCHITECTURE: "arm64"
 
 docker-test-x86:
   << : *integration-tests-docker-tmpl
@@ -141,6 +105,41 @@ docker-test-arm64:
   needs:
     - docker-build-arm64
 
+docker-build-x86:
+  << : *docker-build-tmpl
+  variables:
+    ARCHITECTURE: "x86"
+
+docker-build-armhf:
+  <<: *docker-build-tmpl
+  variables:
+    ARCHITECTURE: "armhf"
+
+docker-build-arm64:
+  <<: *docker-build-tmpl
+  variables:
+    ARCHITECTURE: "arm64"
+
+build-docker-builder:
+  << : *docker-login-before-script
+  stage: pre-build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - docker pull ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "docker-builder:latest not found in \"${CI_REGISTRY_IMAGE}\"!"
+    - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "NONE")"
+    - LATEST="$(docker version -f '{{ .Client.Version }}')"
+    - |
+      if [[ "$CURRENT" != "$LATEST" ]]
+      then
+        docker build --progress=plain . -f ci/docker/docker-builder/Dockerfile \
+          -t "${CI_REGISTRY_IMAGE}/docker-builder:latest" -t "${CI_REGISTRY_IMAGE}/docker-builder:${LATEST}"
+        docker push "${CI_REGISTRY_IMAGE}/docker-builder:latest"
+      else
+        echo "Image already exists for latests docker version ($LATEST). Not rebuilding."
+      fi
+
 docker-deploy-x86:
   <<: *docker-deploy-tmpl
   variables:
@@ -148,19 +147,3 @@ docker-deploy-x86:
     DEPLOYMENT_TESTING: "true"
   needs:
     - docker-test-x86
-
-docker-deploy-armhf:
-  <<: *docker-deploy-tmpl
-  variables:
-    ARCHITECTURE: armhf
-    DEPLOYMENT_TESTING: "true"
-  needs:
-    - docker-test-armhf
-
-docker-deploy-arm64:
-  <<: *docker-deploy-tmpl
-  variables:
-    ARCHITECTURE: arm64
-    DEPLOYMENT_TESTING: "true"
-  needs:
-    - docker-test-arm64
