--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ stages:
       "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${NCP_TAG?}:latest"
     - >
       docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-${NCP_TAG?}:${CI_PIPELINE_IID}"
-      "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${NCP_TAG?}:${CI_COMMIT_REF_NAME}"
+      "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${NCP_TAG?}:${CI_COMMIT_REF_SLUG}"
   rules:
     - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/'
       when: manual
