--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ stages:
     - >
       docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-${NCP_TAG?}:${CI_PIPELINE_IID}"
       "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${NCP_TAG?}:${CI_COMMIT_REF_SLUG}"
+    - docker push "${DOCKERHUB_NAMESPACE?}/nextcloudpi-${NCP_TAG?}"
   rules:
     - if: '$CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/'
       when: manual
