nc-sync-encrypted-auto now stores the GPG passphrase to enable scheduled backups Encrypted rsync now allows both nextcloud data and database for backup
Signed-off-by: Daniel Plöger <daniel.ploeger@tuhh.de>
Signed-off-by: Daniel Plöger <d.ploeger@tuhh.de>

--- a/etc/ncp-config.d/nc-rsync-encrypted.cfg
+++ b/etc/ncp-config.d/nc-rsync-encrypted.cfg
@@ -7,6 +7,18 @@
   "infotitle": "",
   "params": [
     {
+      "id": "INCLUDEDB",
+      "name": "Include database",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
+      "id": "INCLUDEDATA",
+      "name": "Include data",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
       "id": "DESTINATION",
       "name": "Destination",
       "value": "user@ip//path/to/sync",
