--- a/etc/ncp-config.d/namecheapDNS.cfg
+++ b/etc/ncp-config.d/namecheapDNS.cfg
@@ -16,7 +16,8 @@
       "id": "PASSWORD",
       "name": "Dynamic DNS password",
       "value": "",
-      "suggest": "840deed9ef1844eca7c198df2d31bf10"
+      "suggest": "your_ddns_password",
+      "type": "password"
     },
     {
       "id": "FULLDOMAIN",
