ncp-config: shorten descriptions
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/freeDNS.cfg
+++ b/etc/ncp-config.d/freeDNS.cfg
@@ -2,8 +2,8 @@
   "id": "freeDNS",
   "name": "Dynamic DNS from freeDNS",
   "title": "freeDNS",
-  "description": "FreeDNS DynamicDNS service (need account from https://freedns.afraid.org/)",
-  "info": "",
+  "description": "FreeDNS DynamicDNS service",
+  "info": "Need account from https://freedns.afraid.org/",
   "infotitle": "",
   "params": [
     {
