--- a/etc/ncp-config.d/no-ip.cfg
+++ b/etc/ncp-config.d/no-ip.cfg
@@ -2,8 +2,8 @@
   "id": "no-ip",
   "name": "DynamicDNS from no-ip",
   "title": "no-ip",
-  "description": "Dynamic DNS no-ip free provider (need account from https://www.noip.com/)",
-  "info": "For this step to succeed, you need to register a noip account first.\nInternet access is required for this configuration to complete.",
+  "description": "Dynamic DNS no-ip free provider",
+  "info": "Need account from https://www.noip.com/",
   "infotitle": "",
   "params": [
     {
