--- a/etc/ncp-config.d/duckDNS.cfg
+++ b/etc/ncp-config.d/duckDNS.cfg
@@ -2,8 +2,8 @@
   "id": "duckDNS",
   "name": "DynamicDNS from duckDNS",
   "title": "duckDNS",
-  "description": "Free Dynamic DNS provider (need account from https://duckdns.org)",
-  "info": "",
+  "description": "Free Dynamic DNS provider",
+  "info": "Need account from https://duckdns.org",
   "infotitle": "",
   "params": [
     {
