--- a/etc/ncp-config.d/nc-forward-ports.cfg
+++ b/etc/ncp-config.d/nc-forward-ports.cfg
@@ -2,7 +2,7 @@
   "id": "nc-forward-ports",
   "name": "Nc-forward-ports",
   "title": "nc-forward-ports",
-  "description": "Set port forwarding to access from outside (UPnP must be enabled in your router)",
+  "description": "Set port forwarding to access from outside",
   "info": "For NextCloudPi to be able to setup your ports, UPnP must be activated\nin your router. Activate it now on your router admin webpage.\n\n** UPnP is considered a security risk **\n\nDon't forget to disable it afterwards",
   "infotitle": "Instructions for UPnP Port Forwarding",
   "params": [
