Make it possible to disable automatic file deletion when backup fails
Signed-off-by: b-m-f <max@ehlers.berlin>

--- a/etc/ncp-config.d/nc-backup-auto.cfg
+++ b/etc/ncp-config.d/nc-backup-auto.cfg
@@ -42,6 +42,13 @@
       "name": "Number of backups to keep",
       "suggest": "4",
       "value": "4"
+    },
+    {
+      "id": "DELETEONFAIL",
+      "name": "Delete files on failure",
+      "value": "yes",
+      "suggest": "yes",
+      "type": "bool"
     }
   ]
 }
