--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -30,6 +30,13 @@
       "name": "Number of backups to keep",
       "value": "4",
       "suggest": "4"
+    },
+    {
+      "id": "DELETEONFAIL",
+      "name": "Delete files on failure",
+      "value": "yes",
+      "suggest": "yes",
+      "type": "bool"
     }
   ]
 }
