--- a/etc/ncp-config.d/metrics.cfg
+++ b/etc/ncp-config.d/metrics.cfg
@@ -1,15 +1,15 @@
 {
   "id": "metrics",
-  "name": "System Metrics to be consumed by an external Prometheus instance",
-  "title": "metrics",
-  "description": "TODO",
-  "info": "TODO",
-  "infotitle": "TODO",
+  "name": "System Metrics, that can be collected by an external server",
+  "title": "System Metrics",
+  "description": "Prometheus (https://prometheus.io) compatible metrics for things like, CPU/memory/disk usage etc.",
+  "info": "",
+  "infotitle": "",
   "params": [
     {
       "id": "ACTIVE",
       "name": "Active",
-      "value": "yes",
+      "value": "no",
       "type": "bool"
     },
     {
