nc21 in progress
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/docker/nextcloud/Dockerfile
+++ b/docker/nextcloud/Dockerfile
@@ -20,6 +20,9 @@ set -e; \
 # mark as image build
 touch /.ncp-image; \
 
+# mark as docker image
+touch /.docker-image; \
+
 # installation ( /var/www/nextcloud -> /data/app which will be in a volume )
 apt-get update; \
 apt-get install --no-install-recommends -y wget ca-certificates sudo jq; \
