letsencrypt: ability to disable it and roll back to self-signed certificates
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/letsencrypt.cfg
+++ b/etc/ncp-config.d/letsencrypt.cfg
@@ -7,6 +7,12 @@
   "infotitle": "Warning",
   "params": [
     {
+      "id": "ACTIVE",
+      "name": "Active",
+      "value": "no",
+      "type": "bool"
+    },
+    {
       "id": "DOMAIN",
       "name": "Domain",
       "value": "",
