--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -2,8 +2,8 @@
   "id": "nc-backup",
   "name": "nc-backup",
   "title": "nc-backup",
-  "description": "Backup this NC instance to a file. This will always include the current Nextcloud directory and the Database. You can choose to include or exclude NC-data.",
-  "info": "",
+  "description": "Backup this NC instance to a file",
+  "info": "This will always include the current Nextcloud directory and the Database.\nYou can choose to include or exclude NC-data.",
   "infotitle": "",
   "params": [
     {
