build: add LXC/LXD support
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .*.swp
-qemu-raspbian-network/
-archive/
-output/
-cache/
-torrent/
-armbian/
-raspbian_root
-raspbian_boot
-ncp-web/wizard.cfg
-ncp-web/ncp-web.cfg
-docker-armhf/qemu-arm-static
+/qemu-raspbian-network/
+/archive/
+/output/
+/cache/
+/torrent/
+/armbian/
+/raspbian_root
+/raspbian_boot
+/ncp-web/wizard.cfg
+/ncp-web/ncp-web.cfg
+/docker-armhf/qemu-arm-static
 .vagrant/
