ncp-web: remove dir indicator on nc-backup
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -10,8 +10,7 @@
       "id": "DESTDIR",
       "name": "Destination directory",
       "value": "/media/USBdrive/ncp-backups",
-      "suggest": "/media/USBdrive/ncp-backups",
-      "type": "directory"
+      "suggest": "/media/USBdrive/ncp-backups"
     },
     {
       "id": "INCLUDEDATA",
