ncp-web: tweak password suggestions
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/nc-admin.cfg
+++ b/etc/ncp-config.d/nc-admin.cfg
@@ -16,12 +16,14 @@
       "id": "PASSWORD",
       "name": "Password",
       "value": "",
+      "suggest": "password",
       "type": "password"
     },
     {
       "id": "CONFIRM",
       "name": "Confirm password",
       "value": "",
+      "suggest": "same password",
       "type": "password"
     }
   ]
