--- a/etc/ncp-config.d/nc-encrypt.cfg
+++ b/etc/ncp-config.d/nc-encrypt.cfg
@@ -15,7 +15,8 @@
     {
       "id": "PASSWORD",
       "name": "Password",
-      "value": "ownyourbits",
+      "value": "",
+      "suggest": "password",
       "type": "password"
     }
   ]
