--- a/etc/ncp-config.d/nc-passwd.cfg
+++ b/etc/ncp-config.d/nc-passwd.cfg
@@ -9,13 +9,14 @@
     {
       "id": "PASSWORD",
       "name": "Password",
-      "value": "ownyourbits",
+      "value": "",
       "type": "password"
     },
     {
       "id": "CONFIRM",
       "name": "Confirm password",
-      "value": "ownyourbits",
+      "value": "",
+      "suggest": "password",
       "type": "password"
     }
   ]
