--- a/etc/ncp-config.d/samba.cfg
+++ b/etc/ncp-config.d/samba.cfg
@@ -15,7 +15,8 @@
     {
       "id": "PWD",
       "name": "Password",
-      "value": "ownyourbits",
+      "value": "",
+      "suggest": "password",
       "type": "password"
     },
     {
