Add prune option to nc-restic-s3-backup

--- a/etc/ncp-config.d/nc-restic-s3-backup.cfg
+++ b/etc/ncp-config.d/nc-restic-s3-backup.cfg
@@ -3,7 +3,7 @@
   "name": "nc-restic-s3-backup",
   "title": "nc-restic-s3-backup",
   "description": "Back up Nextcloud data to S3-compatible storage via restic",
-  "info": "Note that this backs up only the Nextcloud data directory, not the database.\n\nBefore using this, you may need to prepare a restic repository using nc-restic-s3-init, if you haven't already done so.\n\nPlease enter the S3 bucket access details as well as an encryption password.\nThe password is required to retrieve the data later on!\nNOTE: The password is NOT stored here for security reasons!",
+  "info": "Note that this backs up only the Nextcloud data directory, not the database.\n\nBefore using this, you may need to prepare a restic repository using nc-restic-s3-init, if you haven't already done so.\n\nPlease enter the S3 bucket access details as well as an encryption password.\nThe password is required to retrieve the data later on!\nNOTE: The password is NOT stored here for security reasons!\n\nIf you specify a number of days to keep, all backups older than the number of days will be deleted.\nIn addition, only the latest backup of each day will be kept.",
   "infotitle": "",
   "params": [
     {
@@ -27,6 +27,12 @@
       "name": "restic password",
       "suggest": "restic password",
       "type": "password"
+    },
+    {
+      "id": "BACKUPLIMIT",
+      "name": "Number of days to keep (0 for all)",
+      "value": "0",
+      "suggest": "0"
     }
   ]
 }
