nc-restic-s3-backup/restore: allow database backup

--- a/etc/ncp-config.d/nc-restic-s3-backup.cfg
+++ b/etc/ncp-config.d/nc-restic-s3-backup.cfg
@@ -29,6 +29,12 @@
       "type": "password"
     },
     {
+      "id": "INCLUDE_DATABASE",
+      "name": "Include database",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
       "id": "BACKUPLIMIT",
       "name": "Number of days to keep (0 for all)",
       "value": "0",
