--- a/etc/ncp-config.d/nc-restic-s3-restore.cfg
+++ b/etc/ncp-config.d/nc-restic-s3-restore.cfg
@@ -27,6 +27,12 @@
       "name": "restic password",
       "suggest": "restic password",
       "type": "password"
+    },
+    {
+      "id": "RESTORE_DATABASE",
+      "name": "Restore database",
+      "value": "yes",
+      "type": "bool"
     }
   ]
 }
