--- a/etc/ncp-config.d/metrics.cfg
+++ b/etc/ncp-config.d/metrics.cfg
@@ -2,7 +2,7 @@
   "id": "metrics",
   "name": "System Metrics, that can be collected by an external server",
   "title": "System Metrics",
-  "description": "Prometheus (https://prometheus.io) compatible metrics for things like, CPU/memory/disk usage etc.",
+  "description": "Prometheus metrics for things like, CPU/memory/disk usage etc.",
   "info": "In order to use these metrics, you will need to setup at least an external Prometheus instance. You can find a quick and easy way to start at https://github.com/theCalcaholic/ncp-monitoring-dashboard",
   "infotitle": "External service required",
   "params": [
