--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ name: CD - Build and push multi-arch images
 
 on:
   push:
-    branches:
-      - master
     tags:
       - '*'
 
@@ -56,7 +54,7 @@ jobs:
              done
 
       - name: Push containers to github container registry as tag
-        if: contains(github.ref, 'refs/tags/')
+        #if: contains(github.ref, 'refs/tags/')
         run: |
              version=$(git describe --tags --always)
              version=${version%-*-*}
@@ -67,7 +65,7 @@ jobs:
               done
 
       - name: Push containers to github container registry as latest
-        if: contains(github.ref, 'refs/heads/')
+        #if: contains(github.ref, 'refs/heads/')
         run: |
              for arch in ${{ env.platforms }}
              do
