--- a/etc/ncp-config.d/dynuDNS.cfg
+++ b/etc/ncp-config.d/dynuDNS.cfg
@@ -20,9 +20,9 @@
     },
     {
       "id": "MYIPV6",
-      "name": "IpV6 address",
+      "name": "IPv6 address (no == no update)",
       "value": "no",
-      "suggest": "IpV6 address or 'no' not to update"
+      "suggest": "IPv6 address or 'no' not to update"
     },
     {
       "id": "DOMAIN",
