--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -7,6 +7,7 @@ on:
         description: git ref, branch or tag to test against
         required: false
         type: string
+  push:
 
 jobs:
   integration-tests:
