installation-tests.yml: Add debug output
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Install and run tests
         run: |
-          ./ncp-install-test.sh "${GIT_REF}"
+          pwd
+          ls -lA
+          ncp-install-test.sh "${GIT_REF}"
 
 
