installation-tests.yml: cd to test-automation directory
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install and run tests
         run: |
           pwd
+          cd /ncp-test-automation/bin
           ls -lA
           ncp-install-test.sh "${GIT_REF}"
 
