installation-tests.yml: call entrypoint manually
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -26,6 +26,7 @@ jobs:
           pwd
           cd /ncp-test-automation/bin
           ls -lA
-          ncp-install-test.sh "${GIT_REF}"
+          bash entrypoint.sh
+          bash ncp-install-test.sh "${GIT_REF}"
 
 
