installation-tests.yml: Change user to ncp inside container
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -23,9 +23,8 @@ jobs:
     steps:
       - name: Install and run tests
         run: |
-          pwd
           cd /ncp-test-automation/bin
-          ls -lA
+          su ncp
           bash entrypoint.sh
           bash ncp-install-test.sh "${GIT_REF}"
 
