--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -26,6 +26,7 @@ jobs:
           cd /ncp-test-automation/bin
           su ncp
           bash entrypoint.sh
+          export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
           bash ncp-install-test.sh "${GIT_REF}"
 
 
