--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install and run tests
         run: |
           cd /ncp-test-automation/bin
+          su ncp
           bash entrypoint.sh
           export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
           bash ncp-install-test.sh "${GIT_REF}"
